--- a/toolbox_academy_preview/dashboard.html
+++ b/toolbox_academy_preview/dashboard.html
@@ -5,14 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>StudyWrench - Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    #loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #1e293b;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .fade-out {
+      animation: fadeOut 0.7s forwards;
+    }
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+  </style>
 </head>
 <body class="bg-slate-100 text-slate-800 font-sans">
+
+  <!-- Loader -->
+  <div id="loader">
+    <h1 class="text-3xl font-bold mb-2 animate-pulse text-blue-400">StudyWrench</h1>
+    <p class="text-slate-300">Loading your dashboard...</p>
+  </div>
 
   <!-- Layout Wrapper -->
   <div class="flex min-h-screen">
 
     <!-- Sidebar -->
-    <aside class="w-64 bg-white shadow-md fixed h-full z-50">
+    <aside class="w-64 bg-white shadow-md fixed h-full z-40">
       <div class="p-6 border-b">
         <h1 class="text-2xl font-bold text-blue-600">StudyWrench</h1>
       </div>
@@ -27,8 +54,6 @@
 
     <!-- Main Content -->
     <main class="ml-64 flex-grow p-10">
-
-      <!-- Dashboard Header -->
       <div class="bg-white shadow rounded-xl p-6 mb-10">
         <h2 class="text-3xl font-bold text-blue-600">Welcome to Your Dashboard</h2>
         <p class="text-slate-600">Submit a question or explore resources below.</p>
@@ -69,11 +94,15 @@
         <h3 class="text-xl font-semibold mb-4">Study Guides</h3>
         <p class="text-slate-500">Coming soon...</p>
       </section>
-
     </main>
   </div>
 
   <script>
+    // Hide loader when ready
+    window.addEventListener('load', () => {
+      document.getElementById('loader').classList.add('fade-out');
+    });
+
     // Submit question
     document.getElementById('questionForm').addEventListener('submit', async function (e) {
       e.preventDefault();
@@ -83,13 +112,11 @@
 
       if (!token) return alert('You must be logged in');
 
-      const user_id = 1;
+      const user_id = 1; // Temporary placeholder
 
       const res = await fetch('/api/questions', {
         method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
+        headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ question, topic, user_id })
       });
 
@@ -117,5 +144,8 @@
 
     window.onload = loadQuestions;
   </script>
+
 </body>
 </html>
+
+   
