--- a/toolbox_academy_preview/auth.html
+++ b/toolbox_academy_preview/auth.html
@@ -3,103 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>StudyWrench - Sign Up / Login</title>
+  <title>StudyWrench - Auth</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-100 text-slate-800 font-sans">
+<body class="bg-slate-100 flex items-center justify-center min-h-screen">
 
-  <!-- Header -->
-  <header class="bg-white shadow-md fixed w-full top-0 z-50">
-    <div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
-      <h1 class="text-2xl font-bold text-blue-600">StudyWrench</h1>
-      <nav>
-        <a href="index.html" class="text-slate-700 hover:text-blue-600 font-medium">Home</a>
-      </nav>
-    </div>
-  </header>
+  <div class="w-full max-w-2xl bg-white shadow-lg rounded-xl p-8 space-y-6">
+    <h1 class="text-3xl font-bold text-center text-blue-600">StudyWrench Login & Signup</h1>
 
-  <!-- Push content down -->
-  <div class="h-20"></div>
+    <!-- LOGIN FORM -->
+    <form id="loginForm" class="space-y-4 border-b pb-6">
+      <h2 class="text-xl font-semibold text-slate-700">Login</h2>
+      <input type="email" id="loginEmail" placeholder="Email" required class="w-full px-4 py-2 border border-slate-300 rounded" />
+      <input type="password" id="loginPassword" placeholder="Password" required class="w-full px-4 py-2 border border-slate-300 rounded" />
+      <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white py-2 px-6 rounded font-bold">
+        Login
+      </button>
+    </form>
 
-  <!-- Auth Section -->
-  <section class="flex justify-center items-center min-h-screen px-6">
-    <div class="bg-white shadow-lg rounded-xl p-8 w-full max-w-md">
-      <h2 class="text-3xl font-bold mb-6 text-center">Create Your Account</h2>
+    <!-- SIGNUP FORM -->
+    <form id="signupForm" class="space-y-4">
+      <h2 class="text-xl font-semibold text-slate-700">Sign Up</h2>
+      <input type="text" id="signupName" placeholder="Name" required class="w-full px-4 py-2 border border-slate-300 rounded" />
+      <input type="email" id="signupEmail" placeholder="Email" required class="w-full px-4 py-2 border border-slate-300 rounded" />
+      <input type="password" id="signupPassword" placeholder="Password" required class="w-full px-4 py-2 border border-slate-300 rounded" />
+      <button type="submit" class="bg-green-600 hover:bg-green-700 text-white py-2 px-6 rounded font-bold">
+        Sign Up
+      </button>
+    </form>
+  </div>
 
-      <!-- Signup Form -->
-      <form id="signupForm" class="space-y-4">
-        <input type="text" placeholder="Full Name" class="w-full px-4 py-2 border border-slate-300 rounded" required>
-        <input type="email" placeholder="Email Address" class="w-full px-4 py-2 border border-slate-300 rounded" required>
-        <input type="password" placeholder="Password" class="w-full px-4 py-2 border border-slate-300 rounded" required>
-        <input type="password" placeholder="Confirm Password" class="w-full px-4 py-2 border border-slate-300 rounded" required>
-        <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white py-2 w-full rounded font-bold">
-          Sign Up
-        </button>
-      </form>
+  <script>
+    // LOGIN
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
 
-      <!-- Divider -->
-      <div class="text-center my-6 text-slate-400 text-sm">OR</div>
+      const email = document.getElementById('loginEmail').value;
+      const password = document.getElementById('loginPassword').value;
 
-      <!-- Login Form -->
-      <h2 class="text-xl font-semibold mb-2 text-center">Already have an account?</h2>
-      <form id="loginForm" class="space-y-4">
-        <input type="email" placeholder="Email Address" class="w-full px-4 py-2 border border-slate-300 rounded" required>
-        <input type="password" placeholder="Password" class="w-full px-4 py-2 border border-slate-300 rounded" required>
-        <button type="submit" class="bg-slate-700 hover:bg-slate-800 text-white py-2 w-full rounded font-bold">
-          Log In
-        </button>
-      </form>
-    </div>
-  </section>
+      const res = await fetch('/api/auth/login', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ email, password })
+      });
 
-  <!-- Footer -->
-  <footer class="text-center py-6 text-sm text-slate-500 bg-slate-50 mt-10">
-    © 2025 StudyWrench. All rights reserved.
-  </footer>
-<script>
-  // Handle Signup
-  document.getElementById('signupForm').addEventListener('submit', async function (e) {
-    e.preventDefault();
+      const data = await res.json();
 
-    const email = this.querySelector('input[type="email"]').value;
-    const password = this.querySelectorAll('input[type="password"]')[0].value;
-    const confirmPassword = this.querySelectorAll('input[type="password"]')[1].value;
-
-    if (password !== confirmPassword) {
-      return alert("Passwords do not match");
-    }
-
-    const res = await fetch('/api/auth/signup', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email, password })
+      if (data.token) {
+        localStorage.setItem('token', data.token);
+        alert('Login successful!');
+        window.location.href = '/dashboard';
+      } else {
+        alert(data.error || 'Login failed');
+      }
     });
 
-    const text = await res.text();
-    alert("Signup: " + text);
-  });
+    // SIGNUP
+    document.getElementById('signupForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
 
-  // Handle Login
-  document.getElementById('loginForm').addEventListener('submit', async function (e) {
-    e.preventDefault();
+      const name = document.getElementById('signupName').value;
+      const email = document.getElementById('signupEmail').value;
+      const password = document.getElementById('signupPassword').value;
 
-    const email = this.querySelector('input[type="email"]').value;
-    const password = this.querySelector('input[type="password"]').value;
-
-    const res = await fetch('/api/auth/login', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ email, password })
-    });
-
-    const data = await res.json();
-    if (data.token) {
-      alert("Login success! Token: " + data.token);
-      // Optionally: localStorage.setItem('token', data.token);
-    } else {
-      alert("Login failed: " + (data.error || 'Unknown error'));
-    }
-  });
-</script>
-</body>
-</html>
+      const res = await fetch('
