--- a/toolbox_academy_preview/auth.html
+++ b/toolbox_academy_preview/auth.html
@@ -66,4 +66,21 @@
       const email = document.getElementById('signupEmail').value;
       const password = document.getElementById('signupPassword').value;
 
-      const res = await fetch('
+      const res = await fetch('/api/auth/signup', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ name, email, password })
+      });
+
+      const data = await res.json();
+
+      if (data.message === 'User registered successfully') {
+        alert('Signup successful! Please login.');
+        document.getElementById('signupForm').reset();
+      } else {
+        alert(data.error || 'Signup failed');
+      }
+    });
+  </script>
+</body>
+</html>
