--- a/toolbox_academy_preview/dashboard.html
+++ b/toolbox_academy_preview/dashboard.html
@@ -28,6 +28,29 @@
   </style>
 </head>
 <body class="bg-slate-100 text-slate-800 font-sans">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>StudyWrench - Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-slate-100 text-slate-800 font-sans">
+
+  <!-- 🚨 Protect route with token check -->
+  <script>
+    const token = localStorage.getItem('token');
+    if (!token) {
+      alert('Please log in first.');
+      window.location.href = '/auth';
+    }
+  </script>
+
+  <!-- Loader -->
+  <div id="loader">
+    <!-- etc -->
+  </div>
 
   <!-- Loader -->
   <div id="loader">
