--- a/toolbox_academy_preview/dashboard.html
+++ b/toolbox_academy_preview/dashboard.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-UTF-8" />
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>StudyWrench Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-slate-100 font-sans text-slate-800">
+<body class="bg-gray-100 font-sans text-gray-800">
 
-  <!-- 🔐 Require Token -->
+  <!-- 🔐 Require login -->
   <script>
     const token = localStorage.getItem('token');
     if (!token) {
@@ -17,49 +17,52 @@
     }
   </script>
 
-  <!-- Flex Layout -->
-  <div class="flex min-h-screen">
-
-    <!-- 📚 Sidebar -->
-    <aside class="w-64 bg-blue-800 text-white p-6 space-y-6">
-      <h2 class="text-2xl font-bold">📘 StudyWrench</h2>
-      <nav class="space-y-4">
-        <button onclick="loadQuestions('mine')" class="w-full text-left hover:bg-blue-700 px-3 py-2 rounded">🧑‍💻 My Questions</button>
-        <button onclick="loadQuestions('all')" class="w-full text-left hover:bg-blue-700 px-3 py-2 rounded">🌍 All Questions</button>
-        <button onclick="loadQuestions('others')" class="w-full text-left hover:bg-blue-700 px-3 py-2 rounded">👥 Other Users</button>
-        <button class="w-full text-left hover:bg-blue-700 px-3 py-2 rounded">📇 Flashcards (soon)</button>
-        <button class="w-full text-left hover:bg-blue-700 px-3 py-2 rounded">🛠 Career Paths</button>
-        <button class="w-full text-left hover:bg-blue-700 px-3 py-2 rounded">📖 Study Guides</button>
-        <button onclick="logout()" class="w-full text-left bg-red-500 hover:bg-red-600 px-3 py-2 rounded mt-4">Logout</button>
+  <div class="flex h-screen overflow-hidden">
+    <!-- Sidebar -->
+    <aside class="w-64 bg-blue-800 text-white flex flex-col p-6 space-y-6">
+      <h1 class="text-2xl font-bold">📘 StudyWrench</h1>
+      <nav class="flex flex-col gap-3">
+        <button onclick="loadQuestions('mine')" class="text-left hover:bg-blue-700 px-4 py-2 rounded">🧑 My Questions</button>
+        <button onclick="loadQuestions('all')" class="text-left hover:bg-blue-700 px-4 py-2 rounded">🌍 All Questions</button>
+        <button onclick="loadQuestions('others')" class="text-left hover:bg-blue-700 px-4 py-2 rounded">👥 Other Users</button>
+        <a href="/questions.html" class="text-left hover:bg-blue-700 px-4 py-2 rounded block">📚 Forum</a>
+        <button class="text-left hover:bg-blue-700 px-4 py-2 rounded">📇 Flashcards (soon)</button>
+        <button class="text-left hover:bg-blue-700 px-4 py-2 rounded">🛠 Career Paths</button>
+        <button onclick="logout()" class="text-left bg-red-500 hover:bg-red-600 px-4 py-2 rounded mt-6">Logout</button>
       </nav>
     </aside>
 
-    <!-- 📄 Main Content -->
-    <main class="flex-1 p-8">
-      <h1 class="text-3xl font-bold mb-4">🧠 Welcome to Your Dashboard</h1>
+    <!-- Main Content -->
+    <main class="flex-1 p-10 overflow-auto">
+      <h2 class="text-3xl font-bold text-blue-800 mb-6">🧠 Welcome to Your Dashboard</h2>
 
-      <!-- Ask Form -->
-      <form id="questionForm" class="bg-white p-6 rounded shadow mb-8 space-y-4">
-        <h2 class="text-xl font-semibold">Ask a Question</h2>
-        <input type="text" id="topic" placeholder="Topic" required class="w-full px-4 py-2 border border-gray-300 rounded" />
-        <textarea id="question" placeholder="Your question..." required class="w-full px-4 py-2 border border-gray-300 rounded"></textarea>
+      <!-- Ask Question Form -->
+      <form id="questionForm" class="bg-white rounded shadow p-6 space-y-4 mb-8">
+        <h3 class="text-xl font-semibold">Ask a Question</h3>
+        <input id="topic" placeholder="Topic" required class="w-full border border-gray-300 p-3 rounded" />
+        <textarea id="question" placeholder="Write your question..." required class="w-full border border-gray-300 p-3 rounded"></textarea>
         <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">Submit</button>
       </form>
 
-      <!-- Dynamic Question Buttons -->
+      <!-- Tabs -->
       <div class="flex space-x-4 mb-6">
         <button onclick="loadQuestions('mine')" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">My Questions</button>
-        <button onclick="loadQuestions('all')" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">All Questions</button>
-        <button onclick="loadQuestions('others')" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Other Users</button>
+        <button onclick="loadQuestions('all')" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">All</button>
+        <button onclick="loadQuestions('others')" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Others</button>
       </div>
 
-      <!-- Questions -->
+      <!-- Questions Display -->
       <div id="questionsContainer" class="space-y-4"></div>
     </main>
   </div>
 
-  <!-- Scripts -->
+  <!-- JavaScript -->
   <script>
+    function logout() {
+      localStorage.removeItem('token');
+      window.location.href = '/auth';
+    }
+
     // Load Questions
     async function loadQuestions(type = 'mine') {
       const container = document.getElementById('questionsContainer');
@@ -70,31 +73,39 @@
       else if (type === 'all') url += '/all';
       else if (type === 'others') url += '/others';
 
-      const res = await fetch(url, {
-        headers: {
-          'Authorization': `Bearer ${localStorage.getItem('token')}`
-        }
-      });
+      try {
+        const res = await fetch(url, {
+          headers: { 'Authorization': `Bearer ${localStorage.getItem('token')}` }
+        });
 
-      const data = await res.json();
+        const data = await res.json();
+        container.innerHTML = '';
 
-      container.innerHTML = '';
-      data.forEach(q => {
-        const div = document.createElement('div');
-        div.className = 'bg-white p-4 rounded shadow';
-        div.innerHTML = `
-          <p class="font-bold text-blue-800">${q.topic}</p>
-          <p>${q.question}</p>
-        `;
-        container.appendChild(div);
-      });
+        data.forEach(q => {
+          const div = document.createElement('div');
+          div.className = 'bg-white p-4 rounded shadow';
+          div.innerHTML = `
+            <p class="text-blue-700 font-bold">${q.topic}</p>
+            <p class="text-gray-700">${q.question}</p>
+          `;
+          container.appendChild(div);
+        });
+      } catch (err) {
+        container.innerHTML = '<p class="text-red-500">Error loading questions.</p>';
+      }
     }
 
-    // Ask a Question
+    // Submit Question
     document.getElementById('questionForm').addEventListener('submit', async (e) => {
       e.preventDefault();
-      const topic = document.getElementById('topic').value;
-      const question = document.getElementById('question').value;
+
+      const topic = document.getElementById('topic').value.trim();
+      const question = document.getElementById('question').value.trim();
+
+      if (!topic || !question) {
+        alert('Please fill out both fields.');
+        return;
+      }
 
       const res = await fetch('/api/questions', {
         method: 'POST',
@@ -107,20 +118,14 @@
 
       const data = await res.json();
       alert(data.message || data.error);
-      loadQuestions('mine'); // Refresh after submit
+      loadQuestions('mine');
       document.getElementById('questionForm').reset();
     });
 
-    // Logout
-    function logout() {
-      localStorage.removeItem('token');
-      window.location.href = '/auth';
-    }
-
-    // Default load
+    // Load default view
     window.onload = () => {
       loadQuestions('mine');
-    }
+    };
   </script>
 </body>
 </html>
