--- a/toolbox_academy_preview/dashboard.html
+++ b/toolbox_academy_preview/dashboard.html
@@ -3,18 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>StudyWrench Dashboard</title>
+  <title>StudyWrench - Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    #loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #1e293b;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .fade-out {
+      animation: fadeOut 0.7s forwards;
+    }
+    @keyframes fadeOut {
+      to { opacity: 0; visibility: hidden; }
+    }
+  </style>
 </head>
 <body class="bg-slate-100 text-slate-800 font-sans">
 
   <!-- Loader -->
-  <div id="loader" class="fixed inset-0 bg-slate-900 text-white flex flex-col items-center justify-center z-50">
-    <h1 class="text-3xl font-bold animate-pulse text-blue-400">StudyWrench</h1>
-    <p class="text-slate-300">Loading dashboard...</p>
+  <div id="loader">
+    <h1 class="text-3xl font-bold mb-2 animate-pulse text-blue-400">StudyWrench</h1>
+    <p class="text-slate-300">Loading your dashboard...</p>
   </div>
 
-  <div class="flex h-screen overflow-hidden">
+  <!-- Layout -->
+  <div class="flex min-h-screen">
 
     <!-- Sidebar -->
     <aside class="w-64 bg-white shadow-md fixed h-full z-40">
@@ -22,104 +44,111 @@
         <h1 class="text-2xl font-bold text-blue-600">StudyWrench</h1>
       </div>
       <nav class="mt-6 space-y-4 px-6">
-        <button onclick="loadQuestions('mine')" class="block text-slate-700 hover:text-blue-600 font-medium">🧑 My Questions</button>
-        <button onclick="loadQuestions('all')" class="block text-slate-700 hover:text-blue-600 font-medium">🌍 All Questions</button>
-        <button onclick="loadQuestions('others')" class="block text-slate-700 hover:text-blue-600 font-medium">👥 Other Users</button>
-        <a href="/questions.html" class="block text-slate-700 hover:text-blue-600 font-medium">📚 Forum</a>
-        <button class="block text-slate-400 font-medium" disabled>📇 Flashcards (coming)</button>
-        <button class="block text-slate-400 font-medium" disabled>🛠 Career Paths (coming)</button>
-        <a href="/auth" onclick="logout()" class="block text-red-500 hover:text-red-700 font-medium">Logout</a>
+        <a href="#ask" class="block text-slate-700 hover:text-blue-600 font-medium">Ask Questions</a>
+        <a href="#flashcards" class="block text-slate-700 hover:text-blue-600 font-medium">Flashcards</a>
+        <a href="#careers" class="block text-slate-700 hover:text-blue-600 font-medium">Career Paths</a>
+        <a href="#guides" class="block text-slate-700 hover:text-blue-600 font-medium">Study Guides</a>
+        <a href="index.html" class="block text-sm text-slate-400 mt-8 hover:text-slate-700">← Back to Home</a>
       </nav>
     </aside>
 
     <!-- Main Content -->
-    <main class="ml-64 p-10 flex-1 overflow-auto">
-      <h2 class="text-3xl font-bold text-blue-800 mb-6">🧠 Dashboard</h2>
-
-      <!-- Ask a Question -->
-      <form id="questionForm" class="bg-white p-6 rounded shadow mb-8 space-y-4">
-        <h3 class="text-xl font-semibold text-slate-800">Ask a Question</h3>
-        <input id="topic" class="w-full border border-slate-300 p-3 rounded" placeholder="Topic" required>
-        <textarea id="question" class="w-full border border-slate-300 p-3 rounded" placeholder="Write your question..." required></textarea>
-        <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700">Submit</button>
-      </form>
-
-      <!-- Tabs -->
-      <div class="flex space-x-4 mb-6">
-        <button onclick="loadQuestions('mine')" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">My Questions</button>
-        <button onclick="loadQuestions('all')" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">All</button>
-        <button onclick="loadQuestions('others')" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Others</button>
+    <main class="ml-64 flex-grow p-10">
+      <div class="bg-white shadow rounded-xl p-6 mb-10">
+        <h2 class="text-3xl font-bold text-blue-600">Welcome to Your Dashboard</h2>
+        <p class="text-slate-600">Submit a question or explore resources below.</p>
       </div>
 
-      <!-- Questions Display -->
-      <div id="questionsContainer" class="space-y-4"></div>
+      <!-- Ask Questions -->
+      <section id="ask" class="bg-white shadow rounded-xl p-6 mb-10">
+        <h3 class="text-xl font-semibold mb-4">Ask a Question</h3>
+        <form id="questionForm" class="space-y-4">
+          <input type="text" id="topic" placeholder="Topic (e.g. HVAC, Electrical)" class="w-full px-4 py-2 border border-slate-300 rounded" required>
+          <textarea id="questionText" placeholder="Type your question here..." class="w-full px-4 py-2 border border-slate-300 rounded h-32" required></textarea>
+          <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white py-2 px-6 rounded font-bold">Submit</button>
+        </form>
+      </section>
+
+      <!-- My Questions -->
+      <section class="bg-white shadow rounded-xl p-6 mb-10">
+        <h3 class="text-xl font-semibold mb-4">Your Submitted Questions</h3>
+        <ul id="questionsList" class="space-y-2"></ul>
+      </section>
+
+      <!-- Other Sections -->
+      <section id="flashcards" class="bg-white shadow rounded-xl p-6 mb-10">
+        <h3 class="text-xl font-semibold mb-4">Flashcards</h3>
+        <p class="text-slate-500">Coming soon...</p>
+      </section>
+      <section id="careers" class="bg-white shadow rounded-xl p-6 mb-10">
+        <h3 class="text-xl font-semibold mb-4">Career Paths</h3>
+        <p class="text-slate-500">Coming soon...</p>
+      </section>
+      <section id="guides" class="bg-white shadow rounded-xl p-6 mb-10">
+        <h3 class="text-xl font-semibold mb-4">Study Guides</h3>
+        <p class="text-slate-500">Coming soon...</p>
+      </section>
     </main>
   </div>
 
   <script>
-    const token = localStorage.getItem('token');
-    if (!token) {
-      alert('Please log in first.');
-      window.location.href = '/auth';
-    }
+    window.addEventListener('load', () => {
+      document.getElementById('loader').classList.add('fade-out');
+    });
 
-    document.getElementById('questionForm').addEventListener('submit', async (e) => {
+    document.getElementById('questionForm').addEventListener('submit', async function (e) {
       e.preventDefault();
-      const topic = document.getElementById('topic').value.trim() || null;
-      const question = document.getElementById('question').value.trim() || null;
+      const token = localStorage.getItem('token');
+      const topic = document.getElementById('topic').value.trim();
+      const question = document.getElementById('questionText').value.trim();
 
-      if (!topic || !question) return alert('Please fill out both fields.');
+      if (!token) return alert('You must be logged in');
 
-      const res = await fetch('/api/questions', {
-        method: 'POST',
+      try {
+        const res = await fetch('/api/questions', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': 'Bearer ' + token
+          },
+          body: JSON.stringify({ topic, question })
+        });
+
+        const result = await res.json();
+        if (res.ok) {
+          alert("✅ Question submitted!");
+          document.getElementById('questionForm').reset();
+          loadQuestions();
+        } else {
+          alert("❌ Error: " + result.error);
+        }
+      } catch (err) {
+        console.error("Error submitting:", err);
+        alert("Something went wrong.");
+      }
+    });
+
+    async function loadQuestions() {
+      const token = localStorage.getItem('token');
+      const res = await fetch('/api/questions/mine', {
         headers: {
-          'Content-Type': 'application/json',
-          'Authorization': `Bearer ${token}`
-        },
-        body: JSON.stringify({ topic, question })
+          'Authorization': 'Bearer ' + token
+        }
       });
 
       const data = await res.json();
-      alert(data.message || data.error || 'Unknown response');
-      loadQuestions('mine');
-      document.getElementById('questionForm').reset();
-    });
+      const list = document.getElementById('questionsList');
+      list.innerHTML = '';
 
-    function logout() {
-      localStorage.removeItem('token');
+      data.forEach(q => {
+        const li = document.createElement('li');
+        li.className = 'bg-slate-50 p-4 rounded shadow';
+        li.innerHTML = `<strong>${q.topic}:</strong><br>${q.question}`;
+        list.appendChild(li);
+      });
     }
 
-    async function loadQuestions(type = 'mine') {
-      const container = document.getElementById('questionsContainer');
-      container.innerHTML = 'Loading...';
-
-      let url = '/api/questions';
-      if (type === 'mine') url += '/mine';
-      else if (type === 'all') url += '/all';
-      else if (type === 'others') url += '/others';
-
-      try {
-        const res = await fetch(url, {
-          headers: { 'Authorization': `Bearer ${token}` }
-        });
-        const data = await res.json();
-        container.innerHTML = '';
-        data.forEach(q => {
-          const div = document.createElement('div');
-          div.className = 'bg-white p-4 rounded shadow';
-          div.innerHTML = `
-            <p class="text-blue-700 font-bold">${q.topic}</p>
-            <p class="text-slate-700">${q.question}</p>`;
-          container.appendChild(div);
-        });
-      } catch (err) {
-        container.innerHTML = '<p class="text-red-500">Error loading questions.</p>';
-      }
-
-      document.getElementById('loader').classList.add('hidden');
-    }
-
-    window.onload = () => loadQuestions('mine');
+    window.onload = loadQuestions;
   </script>
 </body>
 </html>
